Don't turn off hardware decoding for webrtc in webview.

There's no need to turn off hw video decoding anymore.

Local testing shows that it works, minus one thing:
 - The video elements in the appr.tc page are marked as autoplay,
   which requires a user gesture.  Without it, the remote player
   stays blank.

Bug: 801501
Change-Id: I39786d70c5c2024bfb0fa4051af76771d1e014e3
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/1649413
Reviewed-by: Bo <boliu@chromium.org>
Commit-Queue: Frank Liberato <liberato@chromium.org>
Cr-Commit-Position: refs/heads/master@{#702436}

Former-commit-id: 0c3f419958c23724a6636f4bc9c7147fc0955d7a